app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
h2 { /* letter-spacing: -1px; */ font-size: 24px; line-height: 30px; }

// ABC news base body font Verdana 12px 18px line-height

// Navbar
// -------------------------
@navbarCollapseWidth:             767px;

@navbarHeight:                    40px;
@navbarBackgroundHighlight:       #ffffff;
@navbarBackground:                darken(@navbarBackgroundHighlight, 5%);
@navbarBorder:                    darken(@navbarBackground, 12%);

@navbarText:                      #777;
@navbarLinkColor:                 #777;
@navbarLinkColorHover:            @grayDark;
@navbarLinkColorActive:           @gray;
@navbarLinkBackgroundHover:       transparent;
@navbarLinkBackgroundActive:      darken(@navbarBackground, 5%);

@navbarBrandColor:                @navbarLinkColor;





//==============
// General edits
//==============

// NI Colours

@niBrown: #f1edd9;
@niRed: #f00d16; /* or #da2128; */
@niGreen: rgba(134,197,67,0.1);
@boxBackgroundColour: #E4E1DF;
@boxGrayLightest: #F5F5F5;
@footerColour: rgba(250,176,59,0.58);
// @footerColour: rgba(250,176,59,0.38); // Old footer 2013

// Link colours

a:visited {
	color: #80bfde;
}

a.btn:visited { color: #333; }

a.btn-primary:visited, a.btn-danger:visited, a.btn-success:visited, a.btn-warning:visited, a.btn-info:visited { color: #fff; }

// Top Nav Bar

.navbar, .navbar-search .search-query {
	font-family: @headingsFontFamily;
	font-size: 14px;
	line-height: 20px;
}

.navbar-search {
	margin: 5px 10px 0px 10px;
}

.navbar .nav > li > a {
	text-shadow: none;
	padding: 13px 10px 7px;
}

.navbar .brand {
	font-family: "Bodega";
	color: @niRed;
	font-size: 26px;
	padding: 8px 20px 6px;
}

.navbar .container {
	margin-bottom: 0px;
	padding-bottom: 0px; 
}

.dropdown-menu > li > form {
	padding: 3px 10px;
	margin: 0;
}

.ios-menu-bar {
	margin-top: -12px;
	opacity: 0.3;
}

.ios-menu-bar:hover {
	opacity: 0.8;
}

.ssl-changer {
	margin-top: -2px;
	opacity:0.3;
	filter:alpha(opacity=30); /* For IE8 and earlier */
}

.ssl-changer:hover {
	opacity:0.8;
	filter:alpha(opacity=80); /* For IE8 and earlier */
}

// Home page styling

.hero-unit {
	background-color: @grayLighter;
	margin: 10px 0px 20px 0px;
	padding: 20px 40px 30px 40px;
}

.hero-unit h1 {
	font-size: 1.9em;
	margin-bottom: 0.25em;
}

.hero-unit p {
	font-size: 0.8em;
	line-height: 1.5em;
}

.hero-buttons {
	// margin: 1.5em 0em 0em 0em;
}

.ios-home-ad {
	margin: 1em 0 0 0;
}

@homeCoverListMargin: 7px;

.home-cover-list {
	margin: 20px -@homeCoverListMargin 20px -@homeCoverListMargin;
}

.home-cover-list img {
	margin-left: @homeCoverListMargin;
	margin-right: @homeCoverListMargin;
	margin-bottom: (@homeCoverListMargin * 2) + 3;
	.border-radius(2px);
}

.hide-meta {
	display: none;
}

.home-keynote {
	margin-top: 1em;
	margin-bottom: 2em;
	border-bottom: 1px solid @grayLighter;
}

.home-keynote img {
	width: 100%;
	margin-bottom: 1em;
	transition: .3s ease;
}

.home-keynote img:hover {
	opacity: 0.8;
	transition: .3s ease;
}

.home-keynote h3 {
	color: @grayLight;
	font-size: 1.3em;
	line-height: inherit;
	margin-bottom: 0;
}

.home-keynote h4 {
	font-weight: inherit;
	font-size: 1em;
}

.home-keynote h5 {
	color: @grayLight;
	font-weight: normal;
}

// User login links & profile link

.user_nav {
	float: right;
	position: relative;
	top: -1px;
}

// Weird icon bug fix

.dropdown-menu li a:hover .icon-star, .dropdown-menu li a:hover .icon-pencil, .dropdown-menu li a:hover .icon-heart {
	background-image: none;
}

.breadcrumb {
	font-family: @headingsFontFamily;
	background-image: none;
	background-color: transparent;
	padding: 0px;
	border: none;
	box-shadow: none;
	color: @grayLight;
}

.breadcrumb a {
	color: @gray;
}

.breadcrumb .label {
	color: #FFF;
	font-weight: normal;
}

.breadcrumb .label:hover {
	color: #000;
	background-color: @footerColour;
	text-shadow:none;
}

.page-header {
	margin-top: 0px;
}

.page-header h3 {
	font-size: 1em;
	font-weight: normal;
	line-height: 1.3em;
	color: @gray;
}

.page-header img {
	.pull-right;
	margin-top: -40px;
}

.page-header .share-links {
	line-height: 2em;
}

.footer {
	color: @grayDark;
	background-color: @footerColour;
	margin: 0 -53px -53px -53px;
	padding: 2em;
	text-align: center;
	.border-radius(0 0 3px 3px);
}

.footer p {
	margin: 0px;
}

.footer a {
	color: @gray;
}

// Issues listed as a tables

.issues_as_table {
	width: 300px;
}

// Purchases listed as a table on the user profile

.purchases_as_table {
	width: 60%;
}

.purchase-issue h3 {
	font-size: 1.2em;
	margin: 0px;
}

.purchase-issue h4 {
	font-size: 1em;
	font-weight: normal;
	color: @grayLight;
	margin-top: -10px;
}

.subscription-price-table {
	width: 80%;
	margin-left: auto;
	margin-right: auto;	
}

// Marketing box styling

.marketing-subscribe {
	.box;
	float: right;
	margin-top: -350px;
	width: 30%;
}

.marketing-subscribe h3 {
	margin: 0px;
}

.marketing-subscribe h4 {
	margin-top: 0px;
	color: @gray;
}

// Remove the 220px width on select form items & text inputs

select {
	width: auto;
}

input, textarea, .uneditable-input {
	width: auto;
}

textarea#article_body, textarea#issue_editors_letter, textarea#issue_email_text {
	width: 100%;
}

// Give the dl dd a little more breathing space between entries

.dl-horizontal dd {
	margin-bottom: 5px;
}

// Give the subscription options radio buttons some breathing room

.subscribe-options dt {
	margin-top: -3px;
	padding-left: 2px;
	padding-right: 2px;
	padding-bottom: 2px;
}

// Shadow

@shadowColour: #999999;
@shadowSizeNormal: 0px 2px 5px;
@shadowSizeSmall: 0px 1px 2px;
@shadowSizeHover: 0px 4px 7px;
@shadowSizeActive: 0px 0px 7px;

.shadow {
	-moz-box-shadow: @shadowSizeNormal @shadowColour;
	-webkit-box-shadow: @shadowSizeNormal @shadowColour;
	box-shadow: @shadowSizeNormal @shadowColour;
}

a:hover .shadow {
	position: relative;
	top: -1px;
	-moz-box-shadow: @shadowSizeHover @shadowColour;
	-webkit-box-shadow: @shadowSizeHover @shadowColour;
	box-shadow: @shadowSizeHover @shadowColour;
}
/* ... */

